--- a/css/loading/14.html
+++ b/css/loading/14.html
@@ -1,8 +1,45 @@
 <html>
   <body>
-    <div class="loading"></div>
+    <div class="loading">
+      <div class="ball1"></div>
+      <div class="ball2"></div>
+      <div class="ball3"></div>
+    </div>
   </body>
   <style>
-    
+    .loading {
+      width: 54px;
+      height: 18px;
+      color: black;
+      display: flex;
+      justify-content: space-around;
+    }
+    .ball1,
+    .ball2,
+    .ball3 {
+      width: 10px;
+      height: 10px;
+      margin: 4px;
+      border-radius: 100%;
+      display: inline-block;
+      float: none;
+      background-color: currentColor;
+      border: 0 solid currentColor;
+      animation: ball-beat 0.7s -0.15s infinite linear;
+    }
+    .ball2 {
+      animation-delay: -0.5s;
+    }
+    @keyframes ball-beat {
+      50% {
+        opacity: 0.2;
+        transform: scale(0.75);
+      }
+
+      100% {
+        opacity: 1;
+        transform: scale(1);
+      }
+    }
   </style>
 </html>
