--- a/css/loading/11.html
+++ b/css/loading/11.html
@@ -1,8 +1,47 @@
 <html>
+  <!-- 轨道 -->
   <body>
     <div class="loading"></div>
   </body>
   <style>
-
+    .loading {
+      position: relative;
+      width: 48px;
+      height: 48px;
+      border-radius: 50%;
+      border: 1px solid;
+      animation: satellite 3s infinite linear;
+    }
+    /* 小球体 */
+    .loading::before {
+      content: "";
+      width: 12px;
+      height: 12px;
+      background: black;
+      border-radius: 50%;
+      position: absolute;
+      top: 1px;
+      left: 1px;
+      box-shadow: 0 0 10px #000;
+    }
+    /* 中心球体 */
+    .loading::after {
+      content: "";
+      background: black;
+      border-radius: 50%;
+      position: absolute;
+      right: 0;
+      width: 20px;
+      height: 20px;
+      margin: 12.5px;
+    }
+    @keyframes satellite {
+      from {
+        transform: rotate(0) translateZ(0);
+      }
+      to {
+        transform: rotate(360deg) translateZ(0);
+      }
+    }
   </style>
 </html>
