--- a/css/loading/test.html
+++ b/css/loading/test.html
@@ -2,7 +2,6 @@
     <div></div>
     <div></div>
     <div></div>
-    <div></div>
 </div>
 
 <style>
@@ -30,149 +29,72 @@
 }
 
 .loading {
-  width: 8px;
-  height: 8px;
+  width: 32px;
+  height: 32px;
 }
 
 .loading > div {
   position: absolute;
-  width: 12px;
-  height: 12px;
-  border-radius: 100%;
-  transform: translate(-50%, -50%);
-  animation: ball-fussion-ball1 1s 0s ease infinite;
-}
-
-.loading > div:nth-child(1) {
   top: 0;
-  left: 50%;
-  z-index: 1;
+  left: 0;
+  width: 32px;
+  height: 32px;
+  border-radius: 100%;
+  opacity: 0;
+  animation: ball-scale-multiple 1s 0s linear infinite;
 }
 
 .loading > div:nth-child(2) {
-  top: 50%;
-  left: 100%;
-  z-index: 2;
-  animation-name: ball-fussion-ball2;
+  animation-delay: 0.2s;
 }
 
 .loading > div:nth-child(3) {
-  top: 100%;
-  left: 50%;
-  z-index: 1;
-  animation-name: ball-fussion-ball3;
-}
-
-.loading > div:nth-child(4) {
-  top: 50%;
-  left: 0;
-  z-index: 2;
-  animation-name: ball-fussion-ball4;
+  animation-delay: 0.4s;
 }
 
 .loading.la-sm {
-  width: 4px;
-  height: 4px;
-}
-
-.loading.la-sm > div {
-  width: 6px;
-  height: 6px;
-}
-
-.loading.la-2x {
   width: 16px;
   height: 16px;
 }
 
+.loading.la-sm > div {
+  width: 16px;
+  height: 16px;
+}
+
+.loading.la-2x {
+  width: 64px;
+  height: 64px;
+}
+
 .loading.la-2x > div {
-  width: 24px;
-  height: 24px;
+  width: 64px;
+  height: 64px;
 }
 
 .loading.la-3x {
-  width: 24px;
-  height: 24px;
+  width: 96px;
+  height: 96px;
 }
 
 .loading.la-3x > div {
-  width: 36px;
-  height: 36px;
+  width: 96px;
+  height: 96px;
 }
 
-@keyframes ball-fussion-ball2 {
+@keyframes ball-scale-multiple {
   0% {
-    opacity: 0.35;
+    opacity: 0;
+    transform: scale(0);
   }
 
-  50% {
-    top: 200%;
-    left: 200%;
-    opacity: 1;
+  5% {
+    opacity: 0.75;
   }
 
   100% {
-    top: 100%;
-    left: 50%;
-    z-index: 1;
-    opacity: 0.35;
-  }
-}
-
-@keyframes ball-fussion-ball1 {
-  0% {
-    opacity: 0.35;
-  }
-
-  50% {
-    top: -100%;
-    left: 200%;
-    opacity: 1;
-  }
-
-  100% {
-    top: 50%;
-    left: 100%;
-    z-index: 2;
-    opacity: 0.35;
-  }
-}
-
-@keyframes ball-fussion-ball3 {
-  0% {
-    opacity: 0.35;
-  }
-
-  50% {
-    top: 200%;
-    left: -100%;
-    opacity: 1;
-  }
-
-  100% {
-    top: 50%;
-    left: 0;
-    z-index: 2;
-    opacity: 0.35;
-  }
-}
-
-@keyframes ball-fussion-ball4 {
-  0% {
-    opacity: 0.35;
-  }
-
-  50% {
-    top: -100%;
-    left: -100%;
-    opacity: 1;
-  }
-
-  100% {
-    top: 0;
-    left: 50%;
-    z-index: 1;
-    opacity: 0.35;
+    opacity: 0;
+    transform: scale(1);
   }
 }
 </style>
