--- a/css/loading/test.html
+++ b/css/loading/test.html
@@ -1,7 +1,12 @@
 <div class="loading">
-    <div></div>
-    <div></div>
-    <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
 </div>
 
 <style>
@@ -31,25 +36,74 @@
 .loading {
   width: 32px;
   height: 32px;
+  animation: line-spin-clockwise-fade-rotating-rotate 6s infinite linear;
 }
 
 .loading > div {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 32px;
-  height: 32px;
-  border-radius: 100%;
-  opacity: 0;
-  animation: ball-scale-multiple 1s 0s linear infinite;
+  width: 2px;
+  height: 10px;
+  margin: 2px;
+  margin-top: -5px;
+  margin-left: -1px;
+  border-radius: 0;
+  animation: line-spin-clockwise-fade-rotating 1s infinite ease-in-out;
+}
+
+.loading > div:nth-child(1) {
+  top: 15%;
+  left: 50%;
+  transform: rotate(0deg);
+  animation-delay: -0.875s;
 }
 
 .loading > div:nth-child(2) {
-  animation-delay: 0.2s;
+  top: 25.2512626585%;
+  left: 74.7487373415%;
+  transform: rotate(45deg);
+  animation-delay: -0.75s;
 }
 
 .loading > div:nth-child(3) {
-  animation-delay: 0.4s;
+  top: 50%;
+  left: 85%;
+  transform: rotate(90deg);
+  animation-delay: -0.625s;
+}
+
+.loading > div:nth-child(4) {
+  top: 74.7487373415%;
+  left: 74.7487373415%;
+  transform: rotate(135deg);
+  animation-delay: -0.5s;
+}
+
+.loading > div:nth-child(5) {
+  top: 84.9999999974%;
+  left: 50.0000000004%;
+  transform: rotate(180deg);
+  animation-delay: -0.375s;
+}
+
+.loading > div:nth-child(6) {
+  top: 74.7487369862%;
+  left: 25.2512627193%;
+  transform: rotate(225deg);
+  animation-delay: -0.25s;
+}
+
+.loading > div:nth-child(7) {
+  top: 49.9999806189%;
+  left: 15.0000039834%;
+  transform: rotate(270deg);
+  animation-delay: -0.125s;
+}
+
+.loading > div:nth-child(8) {
+  top: 25.2506949798%;
+  left: 25.2513989292%;
+  transform: rotate(315deg);
+  animation-delay: 0s;
 }
 
 .loading.la-sm {
@@ -58,8 +112,10 @@
 }
 
 .loading.la-sm > div {
-  width: 16px;
-  height: 16px;
+  width: 1px;
+  height: 4px;
+  margin-top: -2px;
+  margin-left: 0;
 }
 
 .loading.la-2x {
@@ -68,8 +124,10 @@
 }
 
 .loading.la-2x > div {
-  width: 64px;
-  height: 64px;
+  width: 4px;
+  height: 20px;
+  margin-top: -10px;
+  margin-left: -2px;
 }
 
 .loading.la-3x {
@@ -78,23 +136,24 @@
 }
 
 .loading.la-3x > div {
-  width: 96px;
-  height: 96px;
+  width: 6px;
+  height: 30px;
+  margin-top: -15px;
+  margin-left: -3px;
 }
 
-@keyframes ball-scale-multiple {
-  0% {
-    opacity: 0;
-    transform: scale(0);
-  }
-
-  5% {
-    opacity: 0.75;
-  }
-
+@keyframes line-spin-clockwise-fade-rotating-rotate {
   100% {
-    opacity: 0;
-    transform: scale(1);
+    transform: rotate(-360deg);
+  }
+}
+
+@keyframes line-spin-clockwise-fade-rotating {
+  50% {
+    opacity: 0.2;
+  }
+  100% {
+    opacity: 1;
   }
 }
 </style>
