--- a/css/loading/test.html
+++ b/css/loading/test.html
@@ -1,159 +1,252 @@
 <div class="loading">
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
+  <div class="shape shape-4">
+    <div class="shape-4-top"></div>
+    <div class="shape-4-bottom"></div>
+    <div class="shape-4-eye"></div>
+  </div>
+  <div class="shape shape-1"></div>
+  <div class="shape shape-2"></div>
+  <div class="shape shape-3"></div>
 </div>
 
 <style>
-.loading,
-.loading > div {
-  position: relative;
-  box-sizing: border-box;
-}
-
 .loading {
-  display: block;
-  font-size: 0;
-  color: #000;
-}
-
-.loading.la-dark {
-  color: #333;
-}
-
-.loading > div {
-  display: inline-block;
-  float: none;
-  background-color: currentColor;
-  border: 0 solid currentColor;
-}
-
-.loading {
-  width: 32px;
-  height: 32px;
-  animation: line-spin-clockwise-fade-rotating-rotate 6s infinite linear;
-}
-
-.loading > div {
-  position: absolute;
-  width: 2px;
-  height: 10px;
-  margin: 2px;
-  margin-top: -5px;
-  margin-left: -1px;
-  border-radius: 0;
-  animation: line-spin-clockwise-fade-rotating 1s infinite ease-in-out;
-}
-
-.loading > div:nth-child(1) {
-  top: 15%;
-  left: 50%;
-  transform: rotate(0deg);
-  animation-delay: -0.875s;
-}
-
-.loading > div:nth-child(2) {
-  top: 25.2512626585%;
-  left: 74.7487373415%;
-  transform: rotate(45deg);
-  animation-delay: -0.75s;
-}
-
-.loading > div:nth-child(3) {
-  top: 50%;
-  left: 85%;
-  transform: rotate(90deg);
-  animation-delay: -0.625s;
-}
-
-.loading > div:nth-child(4) {
-  top: 74.7487373415%;
-  left: 74.7487373415%;
-  transform: rotate(135deg);
-  animation-delay: -0.5s;
-}
-
-.loading > div:nth-child(5) {
-  top: 84.9999999974%;
-  left: 50.0000000004%;
-  transform: rotate(180deg);
-  animation-delay: -0.375s;
-}
-
-.loading > div:nth-child(6) {
-  top: 74.7487369862%;
-  left: 25.2512627193%;
-  transform: rotate(225deg);
-  animation-delay: -0.25s;
-}
-
-.loading > div:nth-child(7) {
-  top: 49.9999806189%;
-  left: 15.0000039834%;
-  transform: rotate(270deg);
-  animation-delay: -0.125s;
-}
-
-.loading > div:nth-child(8) {
-  top: 25.2506949798%;
-  left: 25.2513989292%;
-  transform: rotate(315deg);
-  animation-delay: 0s;
-}
-
-.loading.la-sm {
-  width: 16px;
-  height: 16px;
-}
-
-.loading.la-sm > div {
-  width: 1px;
-  height: 4px;
-  margin-top: -2px;
-  margin-left: 0;
-}
-
-.loading.la-2x {
-  width: 64px;
-  height: 64px;
-}
-
-.loading.la-2x > div {
-  width: 4px;
-  height: 20px;
-  margin-top: -10px;
-  margin-left: -2px;
-}
-
-.loading.la-3x {
-  width: 96px;
-  height: 96px;
-}
-
-.loading.la-3x > div {
-  width: 6px;
+  width: 30px;
   height: 30px;
-  margin-top: -15px;
-  margin-left: -3px;
+  position: relative;
+  display: flex;
+  align-items: center;
 }
 
-@keyframes line-spin-clockwise-fade-rotating-rotate {
+.shape {
+  width: 10px;
+  height: 10px;
+  position: absolute;
+  border-radius: 50%;
+}
+
+.shape-1 {
+  background-color: #1875e5;
+  left: -5px;
+  animation: animationShape1 7s linear infinite;
+}
+
+.shape-2 {
+  background-color: #c5523f;
+  left: 15px;
+  animation: animationShape2 7s linear infinite;
+}
+
+.shape-3 {
+  background-color: #499255;
+  left: 35px;
+  animation: animationShape3 7s linear infinite;
+}
+
+.shape-4 {
+  background-color: #f2b736;
+  width: 30px;
+  height: 30px;
+  left: -40px;
+  background-color: transparent !important;
+  z-index: 2;
+  animation: animationShape4 7s linear infinite;
+}
+
+.shape-4 > div {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+
+.shape-4 .shape-4-top {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #fbbc05;
+  clip: rect(0 30px 15px 0);
+  transform: rotate(-30deg);
+  animation: animationShape4Top 0.4s ease infinite alternate;
+}
+
+.shape-4 .shape-4-bottom {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #fbbc05;
+  clip: rect(15px 30px 30px 0);
+  transform: rotate(45deg);
+  animation: animationShape4Bottom 0.4s ease infinite alternate;
+}
+
+.shape-4 .shape-4-eye {
+  width: 5px;
+  height: 5px;
+  background-color: rgba(0, 0, 0, 0.8);
+  border-radius: 50%;
+  position: absolute;
+  top: 5px;
+  right: 10px;
+}
+
+@keyframes animationShape4Top {
+  0% {
+    transform: rotate(-30deg);
+  }
+
   100% {
-    transform: rotate(-360deg);
+    transform: rotate(0);
   }
 }
 
-@keyframes line-spin-clockwise-fade-rotating {
-  50% {
-    opacity: 0.2;
+@keyframes animationShape4Bottom {
+  0% {
+    transform: rotate(45deg);
   }
+
+  100% {
+    transform: rotate(0);
+  }
+}
+
+@keyframes animationShape1 {
+  0% {
+    opacity: 1;
+  }
+
+  17% {
+    opacity: 1;
+  }
+
+  19% {
+    opacity: 0;
+  }
+
+  30% {
+    opacity: 0;
+  }
+
+  40% {
+    opacity: 1;
+  }
+
+  85% {
+    opacity: 1;
+  }
+
+  90% {
+    opacity: 0;
+  }
+
+  95% {
+    opacity: 0;
+  }
+
   100% {
     opacity: 1;
+  }
+}
+
+@keyframes animationShape2 {
+  0% {
+    opacity: 1;
+  }
+
+  20% {
+    opacity: 1;
+  }
+
+  22% {
+    opacity: 0;
+  }
+
+  35% {
+    opacity: 0;
+  }
+
+  45% {
+    opacity: 1;
+  }
+
+  75% {
+    opacity: 1;
+  }
+
+  80% {
+    opacity: 0;
+  }
+
+  90% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes animationShape3 {
+  0% {
+    opacity: 1;
+  }
+
+  27% {
+    opacity: 1;
+  }
+
+  29% {
+    opacity: 0;
+  }
+
+  40% {
+    opacity: 0;
+  }
+
+  64% {
+    opacity: 1;
+  }
+
+  65% {
+    opacity: 1;
+  }
+
+  70% {
+    opacity: 0;
+  }
+
+  80% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes animationShape4 {
+  0% {
+    left: -40px;
+    transform: rotateY(0);
+  }
+
+  45% {
+    left: 50px;
+    transform: rotateY(0);
+  }
+
+  50% {
+    left: 50px;
+    transform: rotateY(180deg);
+  }
+
+  95% {
+    left: -40px;
+    transform: rotateY(180deg);
+  }
+
+  100% {
+    left: -40px;
+    transform: rotateY(0);
   }
 }
 </style>
