--- a/css/loading/test.html
+++ b/css/loading/test.html
@@ -1,252 +1,122 @@
 <div class="loading">
-  <div class="shape shape-4">
-    <div class="shape-4-top"></div>
-    <div class="shape-4-bottom"></div>
-    <div class="shape-4-eye"></div>
-  </div>
-  <div class="shape shape-1"></div>
-  <div class="shape shape-2"></div>
-  <div class="shape shape-3"></div>
+  <div></div>
 </div>
 
 <style>
-.loading {
-  width: 30px;
-  height: 30px;
+.loading,
+.loading > div {
   position: relative;
-  display: flex;
-  align-items: center;
+  box-sizing: border-box;
 }
 
-.shape {
-  width: 10px;
-  height: 10px;
-  position: absolute;
-  border-radius: 50%;
+.loading {
+  display: block;
+  font-size: 0;
+  color: #000;
 }
 
-.shape-1 {
-  background-color: #1875e5;
-  left: -5px;
-  animation: animationShape1 7s linear infinite;
+.loading.la-dark {
+  color: #333;
 }
 
-.shape-2 {
-  background-color: #c5523f;
-  left: 15px;
-  animation: animationShape2 7s linear infinite;
+.loading > div {
+  display: inline-block;
+  float: none;
+  background-color: currentColor;
+  border: 0 solid currentColor;
 }
 
-.shape-3 {
-  background-color: #499255;
-  left: 35px;
-  animation: animationShape3 7s linear infinite;
+.loading {
+  width: 32px;
+  height: 32px;
 }
 
-.shape-4 {
-  background-color: #f2b736;
-  width: 30px;
-  height: 30px;
-  left: -40px;
-  background-color: transparent !important;
-  z-index: 2;
-  animation: animationShape4 7s linear infinite;
-}
-
-.shape-4 > div {
+.loading > div {
   width: 100%;
   height: 100%;
-  border-radius: 50%;
+  background: transparent;
+  border-width: 2px;
+  border-radius: 0;
+  animation: square-loader 2s infinite ease;
 }
 
-.shape-4 .shape-4-top {
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-color: #fbbc05;
-  clip: rect(0 30px 15px 0);
-  transform: rotate(-30deg);
-  animation: animationShape4Top 0.4s ease infinite alternate;
+.loading > div:after {
+  display: inline-block;
+  width: 100%;
+  vertical-align: top;
+  content: "";
+  background-color: currentColor;
+  animation: square-loader-inner 2s infinite ease-in;
 }
 
-.shape-4 .shape-4-bottom {
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-color: #fbbc05;
-  clip: rect(15px 30px 30px 0);
-  transform: rotate(45deg);
-  animation: animationShape4Bottom 0.4s ease infinite alternate;
+.loading.la-sm {
+  width: 16px;
+  height: 16px;
 }
 
-.shape-4 .shape-4-eye {
-  width: 5px;
-  height: 5px;
-  background-color: rgba(0, 0, 0, 0.8);
-  border-radius: 50%;
-  position: absolute;
-  top: 5px;
-  right: 10px;
+.loading.la-sm > div {
+  border-width: 1px;
 }
 
-@keyframes animationShape4Top {
+.loading.la-2x {
+  width: 64px;
+  height: 64px;
+}
+
+.loading.la-2x > div {
+  border-width: 4px;
+}
+
+.loading.la-3x {
+  width: 96px;
+  height: 96px;
+}
+
+.loading.la-3x > div {
+  border-width: 6px;
+}
+
+@keyframes square-loader {
   0% {
-    transform: rotate(-30deg);
+    transform: rotate(0deg);
   }
 
-  100% {
-    transform: rotate(0);
-  }
-}
-
-@keyframes animationShape4Bottom {
-  0% {
-    transform: rotate(45deg);
-  }
-
-  100% {
-    transform: rotate(0);
-  }
-}
-
-@keyframes animationShape1 {
-  0% {
-    opacity: 1;
-  }
-
-  17% {
-    opacity: 1;
-  }
-
-  19% {
-    opacity: 0;
-  }
-
-  30% {
-    opacity: 0;
-  }
-
-  40% {
-    opacity: 1;
-  }
-
-  85% {
-    opacity: 1;
-  }
-
-  90% {
-    opacity: 0;
-  }
-
-  95% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
-}
-
-@keyframes animationShape2 {
-  0% {
-    opacity: 1;
-  }
-
-  20% {
-    opacity: 1;
-  }
-
-  22% {
-    opacity: 0;
-  }
-
-  35% {
-    opacity: 0;
-  }
-
-  45% {
-    opacity: 1;
-  }
-
-  75% {
-    opacity: 1;
-  }
-
-  80% {
-    opacity: 0;
-  }
-
-  90% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
-}
-
-@keyframes animationShape3 {
-  0% {
-    opacity: 1;
-  }
-
-  27% {
-    opacity: 1;
-  }
-
-  29% {
-    opacity: 0;
-  }
-
-  40% {
-    opacity: 0;
-  }
-
-  64% {
-    opacity: 1;
-  }
-
-  65% {
-    opacity: 1;
-  }
-
-  70% {
-    opacity: 0;
-  }
-
-  80% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
-}
-
-@keyframes animationShape4 {
-  0% {
-    left: -40px;
-    transform: rotateY(0);
-  }
-
-  45% {
-    left: 50px;
-    transform: rotateY(0);
+  25% {
+    transform: rotate(180deg);
   }
 
   50% {
-    left: 50px;
-    transform: rotateY(180deg);
+    transform: rotate(180deg);
   }
 
-  95% {
-    left: -40px;
-    transform: rotateY(180deg);
+  75% {
+    transform: rotate(360deg);
   }
 
   100% {
-    left: -40px;
-    transform: rotateY(0);
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes square-loader-inner {
+  0% {
+    height: 0;
+  }
+
+  25% {
+    height: 0;
+  }
+
+  50% {
+    height: 100%;
+  }
+
+  75% {
+    height: 100%;
+  }
+
+  100% {
+    height: 0;
   }
 }
 </style>
