--- a/css/loading2/55.html
+++ b/css/loading2/55.html
@@ -1,8 +1,63 @@
 <html>
   <body>
-    <div class="loading"></div>
+    <div class="loading">
+      <div></div>
+    </div>
   </body>
   <style>
-   
+    .loading {
+      display: inline-block;
+      width: 32px;
+      height: 32px;
+      display: block;
+      border: 2px solid;
+      animation: square-loader 2s infinite ease;
+    }
+    .loading::after {
+      /* 加上这个display黑色不断上升的效果才显示 */
+      display: inline-block;
+      width: 32px;
+      content: "";
+      background-color: black;
+      animation: square-loader-inner 2s infinite ease-in;
+    }
+    @keyframes square-loader {
+      0% {
+        transform: rotate(0deg);
+      }
+
+      25% {
+        transform: rotate(180deg);
+      }
+
+      50% {
+        transform: rotate(180deg);
+      }
+
+      75% {
+        transform: rotate(360deg);
+      }
+
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+    @keyframes square-loader-inner {
+      0% {
+        height: 0;
+      }
+      25% {
+        height: 0;
+      }
+      50% {
+        height: 100%;
+      }
+      75% {
+        height: 100%;
+      }
+      100% {
+        height: 0;
+      }
+    }
   </style>
 </html>
