--- a/css/loading2/56.html
+++ b/css/loading2/56.html
@@ -1,8 +1,35 @@
 <html>
+  <!-- 正方形不同角度旋转 -->
   <body>
-    <div class="loading"></div>
+    <div class="loading">
+      <div></div>
+    </div>
   </body>
   <style>
-   
+    .loading {
+      display: inline-block;
+      width: 32px;
+      height: 32px;
+      display: block;
+      background-color: black;
+      animation: square-spin 3s 0s cubic-bezier(0.09, 0.57, 0.49, 0.9) infinite;
+    }
+    @keyframes square-spin {
+      0% {
+        transform: perspective(100px) rotateX(0) rotateY(0);
+      }
+      25% {
+        transform: perspective(100px) rotateX(180deg) rotateY(0);
+      }
+      50% {
+        transform: perspective(100px) rotateX(180deg) rotateY(180deg);
+      }
+      75% {
+        transform: perspective(100px) rotateX(0) rotateY(180deg);
+      }
+      100% {
+        transform: perspective(100px) rotateX(0) rotateY(360deg);
+      }
+    }
   </style>
 </html>
