--- a/css/loading/test.html
+++ b/css/loading/test.html
@@ -1,122 +1,60 @@
-<div class="loading">
-  <div></div>
-</div>
+<div class="loading"></div>
 
 <style>
-.loading,
-.loading > div {
+.loading {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  display: inline-block;
   position: relative;
-  box-sizing: border-box;
+  color: #666;
+  left: -100px;
+  animation: shadowRolling 2s linear infinite;
 }
 
-.loading {
-  display: block;
-  font-size: 0;
-  color: #000;
-}
+@keyframes shadowRolling {
+  /* 0% {
+    box-shadow: 0px 0 rgba(255, 255, 255, 0), 0px 0 rgba(255, 255, 255, 0),
+      0px 0 rgba(255, 255, 255, 0), 0px 0 rgba(255, 255, 255, 0);
+  } */
 
-.loading.la-dark {
-  color: #333;
-}
-
-.loading > div {
-  display: inline-block;
-  float: none;
-  background-color: currentColor;
-  border: 0 solid currentColor;
-}
-
-.loading {
-  width: 32px;
-  height: 32px;
-}
-
-.loading > div {
-  width: 100%;
-  height: 100%;
-  background: transparent;
-  border-width: 2px;
-  border-radius: 0;
-  animation: square-loader 2s infinite ease;
-}
-
-.loading > div:after {
-  display: inline-block;
-  width: 100%;
-  vertical-align: top;
-  content: "";
-  background-color: currentColor;
-  animation: square-loader-inner 2s infinite ease-in;
-}
-
-.loading.la-sm {
-  width: 16px;
-  height: 16px;
-}
-
-.loading.la-sm > div {
-  border-width: 1px;
-}
-
-.loading.la-2x {
-  width: 64px;
-  height: 64px;
-}
-
-.loading.la-2x > div {
-  border-width: 4px;
-}
-
-.loading.la-3x {
-  width: 96px;
-  height: 96px;
-}
-
-.loading.la-3x > div {
-  border-width: 6px;
-}
-
-@keyframes square-loader {
-  0% {
-    transform: rotate(0deg);
+  12% {
+    box-shadow: 100px 0 #666, 0px 0 rgba(255, 255, 255, 0),
+      0px 0 rgba(255, 255, 255, 0), 0px 0 rgba(255, 255, 255, 0);
   }
 
   25% {
-    transform: rotate(180deg);
+    box-shadow: 110px 0 #666, 100px 0 #666, 0px 0 rgba(255, 255, 255, 0),
+      0px 0 rgba(255, 255, 255, 0);
+  }
+
+  36% {
+    box-shadow: 120px 0 #666, 110px 0 #666, 100px 0 #666,
+      0px 0 rgba(255, 255, 255, 0);
   }
 
   50% {
-    transform: rotate(180deg);
+    box-shadow: 130px 0 #666, 120px 0 #666, 110px 0 #666, 100px 0 #666;
+  }
+
+  62% {
+    box-shadow: 200px 0 rgba(255, 255, 255, 0), 130px 0 #666, 120px 0 #666,
+      110px 0 #666;
   }
 
   75% {
-    transform: rotate(360deg);
+    box-shadow: 200px 0 rgba(255, 255, 255, 0), 200px 0 rgba(255, 255, 255, 0),
+      130px 0 #666, 120px 0 #666;
+  }
+
+  87% {
+    box-shadow: 200px 0 rgba(255, 255, 255, 0), 200px 0 rgba(255, 255, 255, 0),
+      200px 0 rgba(255, 255, 255, 0), 130px 0 #666;
   }
 
   100% {
-    transform: rotate(360deg);
-  }
-}
-
-@keyframes square-loader-inner {
-  0% {
-    height: 0;
-  }
-
-  25% {
-    height: 0;
-  }
-
-  50% {
-    height: 100%;
-  }
-
-  75% {
-    height: 100%;
-  }
-
-  100% {
-    height: 0;
+    box-shadow: 200px 0 rgba(255, 255, 255, 0), 200px 0 rgba(255, 255, 255, 0),
+      200px 0 rgba(255, 255, 255, 0), 200px 0 rgba(255, 255, 255, 0);
   }
 }
 </style>
